--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@ img:hover {
   
   </style>
   <head>
+    <link rel="icon" type="image/x-icon" href="https://www.freeiconspng.com/img/46498">
+    <title> LILY PAGE </title>
    </head>
     
   <body>
