--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
   text-align: center; 
 }
 body {
+ 
+  <nav>
+  <li><a href="index.html"> HOME </a></li>
+  <li><a href="datasetapp.html"> Data Set App </a></li>
+  <li><a href="musicquiz.html"> Music Quiz </a></li>
+  </nav>
+  
   background-color:#BFD7FF;
   text-shadow: 2px 3px 5px #5465FF;
 }
