--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ img:hover {
   
   </style>
   <head>
+   <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="https://www.freeiconspng.com/img/46498">
     <title> LILY PAGE </title>
    </head>
