--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@ body {
   </nav>
 
 }
+ background {
   background-color:#BFD7FF;
   text-shadow: 2px 3px 5px #5465FF;
-  
+
+ }
   img {
   width:30%;  
   border: dotted #9BB1FF 8px; 
