--- a/index.html
+++ b/index.html
@@ -19,12 +19,24 @@ img:hover {
   transform: scaleX(-1);
 }
  </style>
+    <head>
+   <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="https://www.freeiconspng.com/img/46498">
+    <title> LILY PAGE </title>
+   </head>
+    
   <body>
-    <nav>
+     <nav>
   <li><a href="index.html"> HOME </a></li>
   <li><a href="datasetapp.html"> Data Set App </a></li>
   <li><a href="musicquiz.html"> Music Quiz </a></li>
   </nav>
-  </body>
+    <h2> Lily's Website </h2>
+    
+   <center>
+   <img src= "https://images.vexels.com/media/users/3/240369/isolated/preview/e1c0844fe16d7b1f474b6ae147bb614b-pink-lily-flower-flat.png">
+
+</body>
+  
 
 </html>
